[DDW-500] Improve summary assets

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -916,9 +916,8 @@
   "wallet.send.confirmationDialog.submit": "送金する",
   "wallet.send.confirmationDialog.title": "トランザクションの確認",
   "wallet.send.confirmationDialog.totalLabel": "合計",
-  "wallet.send.form.amount.label": "金額",
-  "wallet.send.form.asset.label": "トークン",
   "wallet.send.form.asset.adaLabel": "ADA",
+  "wallet.send.form.asset.label": "トークン",
   "wallet.send.form.button.addAssetButtonLabel": "+ トークンを追加する",
   "wallet.send.form.button.addNewReceiver": "+ 別のレシーバーを追加する",
   "wallet.send.form.button.removeReceiver": "削除",
@@ -930,9 +929,7 @@
   "wallet.send.form.estimatedFee.label": "推定料金",
   "wallet.send.form.minAdaRequired": "最低{adaValue}ADAが必要です",
   "wallet.send.form.minAdaRequiredTooltip": "少なくとも{adaValue}ADAをこれに送信する必要があります 他のアセットを送信しているため、受信者。",
-  "wallet.send.form.next": "続ける",
   "wallet.send.form.of.label": "/",
-  "wallet.send.form.receiver.hint": "ウォレットアドレス",
   "wallet.send.form.receiver.label": "送金先",
   "wallet.send.form.receiver.placeholder": "アドレスを貼り付け",
   "wallet.send.form.reset": "リセット",
@@ -1056,8 +1053,8 @@
   "wallet.summary.header.transactionsLabel": "トランザクション数",
   "wallet.summary.noTokens.learnMore.linkLabel": "もっと知る",
   "wallet.summary.noTokens.learnMore.linkUrl": "https://iohk.io/en/blog/posts/2021/02/04/native-tokens-to-bring-new-utility-to-life-on-cardano/",
-  "wallet.summary.noTokens.learnMore.textTop": "ネイティブトークンについてもっと知りたいですか？",
   "wallet.summary.noTokens.learnMore.textBottom": "役立つ入門書については、IOHKブログにアクセスすることから始めてください。",
+  "wallet.summary.noTokens.learnMore.textTop": "ネイティブトークンについてもっと知りたいですか？",
   "wallet.summary.page.no.transactions": "最近のトランザクションはありません",
   "wallet.summary.transactionsList.showMoreTransactionsButtonLabel": "もっと表示",
   "wallet.summary.transactionsList.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
@@ -1106,6 +1103,8 @@
   "wallet.transaction.state.failedHeading": "失敗しました",
   "wallet.transaction.state.pending": "トランザクション処理中",
   "wallet.transaction.state.pendingHeading": "保留中",
+  "wallet.transaction.tokensReceived": "!!!Tokens received",
+  "wallet.transaction.tokensSent": "!!!Tokens sent",
   "wallet.transaction.transactionAmount": "トランザクション額",
   "wallet.transaction.transactionFee": "取引料金",
   "wallet.transaction.transactionId": "トランザクションID",
