[DDW-500] Update receive screen text copy

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -796,8 +796,9 @@
   "wallet.receive.page.addresses.addressesTitle": "Receiving addresses",
   "wallet.receive.page.copyAddressLabel": "Copy address",
   "wallet.receive.page.generateNewAddressButtonLabel": "Generate a new address",
-  "wallet.receive.page.instructions.instructionsDescription": "Share any of these wallet addresses to receive payments. To protect your privacy, always use a new address when requesting funds. New addresses will be automatically generated after you receive funds to the addresses listed here.",
-  "wallet.receive.page.instructions.instructionsTitle": "Your wallet addresses",
+  "wallet.receive.page.instructions.instructionsDescription": "Share any of these wallet addresses <b>to receive payments in ada or a native Cardano token</b>.",
+  "wallet.receive.page.instructions.instructionsTitle": "Available wallet addresses",
+  "wallet.receive.page.instructions.privacyWarning": "Privacy warning: Please note that all of your receiving addresses include your stake key. When you share a receiving address, the recipient can search the blockchain using your stake key to locate all addresses associated with your wallet, and also discover your wallet balance and transaction history.",
   "wallet.receive.page.receivingAddressesSectionTitle": "Receiving addresses",
   "wallet.receive.page.shareAddressLabel": "Share",
   "wallet.receive.page.showUsedLabel": "Show used",
@@ -1075,11 +1076,11 @@
   "wallet.transaction.filter.apply": "Apply",
   "wallet.transaction.filter.custom": "Custom",
   "wallet.transaction.filter.dateRange": "Time",
-  "wallet.transaction.filter.incoming": "Ada received",
+  "wallet.transaction.filter.incoming": "Received",
   "wallet.transaction.filter.last30Days": "Last 30 days",
   "wallet.transaction.filter.last7Days": "Last 7 days",
   "wallet.transaction.filter.last90Days": "Last 90 days",
-  "wallet.transaction.filter.outgoing": "Ada sent",
+  "wallet.transaction.filter.outgoing": "Sent",
   "wallet.transaction.filter.resetFilter": "Reset Filter",
   "wallet.transaction.filter.resultInfo": "<b>{filtered}</b> out of <b>{total}</b> transactions match your filter.",
   "wallet.transaction.filter.selectTimeRange": "Select time range",
