--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -796,8 +796,9 @@
   "wallet.receive.page.addresses.addressesTitle": "入金先アドレス",
   "wallet.receive.page.copyAddressLabel": "アドレスをコピーする",
   "wallet.receive.page.generateNewAddressButtonLabel": "新しいアドレスを生成する",
-  "wallet.receive.page.instructions.instructionsDescription": "いずれかのウォレットアドレスを共有して入金先に使用します。プライバシー保護のため入金先には常に新しいアドレスを使用してください。ここに表示されているアドレスが入金先として使用されると、新しいアドレスが自動的に生成されます。",
-  "wallet.receive.page.instructions.instructionsTitle": "あなたのウォレットアドレス",
+  "wallet.receive.page.instructions.instructionsDescription": "これらいずれかのウォレットアドレスを共有して、<b>ADAまたはCardanoネイティブトークンの入金先</b>に使用します。",
+  "wallet.receive.page.instructions.instructionsTitle": "使用可能なウォレットアドレス",
+  "wallet.receive.page.instructions.privacyWarning": "プライバシーに関する警告：すべての入金アドレスにはあなたのステーク鍵が含まれることにご注意ください。入金先アドレスを共有すると、受信者はステーク鍵を使ってブロックチェーンを検索し、あなたのウォレットに関連付けられるすべてのアドレスを特定できるだけでなく、ウォレット残高やトランザクション履歴を見つけることができます。",
   "wallet.receive.page.receivingAddressesSectionTitle": "入金先アドレス",
   "wallet.receive.page.shareAddressLabel": "共有する",
   "wallet.receive.page.showUsedLabel": "使用済みアドレスを表示する",
