--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -9483,7 +9483,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Your wallet addresses",
+        "defaultMessage": "!!!Available wallet addresses",
         "description": "Instructions Title on the wallet \"Receive page\"",
         "end": {
           "column": 3,
@@ -9764,7 +9764,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Your wallet addresses",
+        "defaultMessage": "!!!Available wallet addresses",
         "description": "Instructions Title on the wallet \"Receive page\"",
         "end": {
           "column": 3,
@@ -9778,7 +9778,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Share any of these wallet addresses to receive payments. To protect your privacy, always use a new address when requesting funds. New addresses will be automatically generated after you receive funds to the addresses listed here.",
+        "defaultMessage": "!!!Share any of these wallet addresses <b>to receive payments in ada or a native Cardano token</b>.",
         "description": "Instructions Description on the wallet \"Receive page\"",
         "end": {
           "column": 3,
@@ -9792,17 +9792,31 @@
         }
       },
       {
-        "defaultMessage": "!!!Receiving addresses",
-        "description": "Addresses Title on the wallet \"Receive page\"",
+        "defaultMessage": "!!!Privacy warning: Please note that all of your receiving addresses include your stake key. When you share a receiving address, the recipient can search the blockchain using your stake key to locate all addresses associated with your wallet, and also discover your wallet balance and transaction history.",
+        "description": "Privacy warning on the wallet \"Receive page\"",
         "end": {
           "column": 3,
           "line": 30
         },
         "file": "source/renderer/app/components/wallet/receive/WalletReceiveSequential.js",
-        "id": "wallet.receive.page.addresses.addressesTitle",
+        "id": "wallet.receive.page.instructions.privacyWarning",
         "start": {
           "column": 18,
           "line": 26
+        }
+      },
+      {
+        "defaultMessage": "!!!Receiving addresses",
+        "description": "Addresses Title on the wallet \"Receive page\"",
+        "end": {
+          "column": 3,
+          "line": 35
+        },
+        "file": "source/renderer/app/components/wallet/receive/WalletReceiveSequential.js",
+        "id": "wallet.receive.page.addresses.addressesTitle",
+        "start": {
+          "column": 18,
+          "line": 31
         }
       },
       {
@@ -9810,13 +9824,13 @@
         "description": "Label for \"show used\" wallet addresses link on the wallet \"Receive page\"",
         "end": {
           "column": 3,
-          "line": 36
+          "line": 41
         },
         "file": "source/renderer/app/components/wallet/receive/WalletReceiveSequential.js",
         "id": "wallet.receive.page.showUsedLabel",
         "start": {
           "column": 17,
-          "line": 31
+          "line": 36
         }
       }
     ],
@@ -11611,7 +11625,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Ada received",
+        "defaultMessage": "!!!Received",
         "description": "Incoming filter type.",
         "end": {
           "column": 3,
@@ -11625,7 +11639,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Ada sent",
+        "defaultMessage": "!!!Sent",
         "description": "Outgoing filter type.",
         "end": {
           "column": 3,
