[DDW-500] Adds JP translations

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -1148,9 +1148,8 @@
   "wallet.transferFunds.dialog2.title": "Transfer funds",
   "wallet.transferFunds.dialog2.total.label": "Total",
   "widgets.assetToken.item.acronym": "Acronym",
-  "widgets.assetToken.item.assetName": "Asset Name",
+  "widgets.assetToken.item.assetName": "Asset name",
   "widgets.assetToken.item.description": "Description",
-  "widgets.assetToken.item.fingerprint": "Fingerprint",
   "widgets.assetToken.item.name": "Name",
   "widgets.assetToken.item.policyId": "Policy Id"
 }
