--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -928,7 +928,7 @@
   "wallet.send.form.errors.invalidTitle": "タイトルを3字以上で入力してください。",
   "wallet.send.form.estimatedFee.label": "推定料金",
   "wallet.send.form.minAdaRequired": "最低{adaValue}ADAが必要です",
-  "wallet.send.form.minAdaRequiredTooltip": "少なくとも{adaValue}ADAをこれに送信する必要があります 他のアセットを送信しているため、受信者。",
+  "wallet.send.form.minAdaRequiredTooltip": "別のトークンを送金するためには、この受信者に最低{adaValue}ADAを送金する必要があります。",
   "wallet.send.form.of.label": "/",
   "wallet.send.form.receiver.label": "送金先",
   "wallet.send.form.receiver.placeholder": "アドレスを貼り付け",
@@ -1147,9 +1147,9 @@
   "wallet.transferFunds.dialog2.sourceWalletAmount.label": "{sourceWalletName}の額",
   "wallet.transferFunds.dialog2.title": "資金を移す",
   "wallet.transferFunds.dialog2.total.label": "合計",
-  "widgets.assetToken.item.acronym": "頭字語",
   "widgets.assetToken.item.assetName": "アセット名",
   "widgets.assetToken.item.description": "説明",
   "widgets.assetToken.item.name": "名称",
-  "widgets.assetToken.item.policyId": "ポリシーID"
+  "widgets.assetToken.item.policyId": "ポリシーID",
+  "widgets.assetToken.item.ticker": "ティッカー"
 }
