[DDW-569] Move itn redemption to daedalus application menu

--- a/source/main/locales/en-US.json
+++ b/source/main/locales/en-US.json
@@ -5,6 +5,7 @@
   "dialog.exportWalletsWarning.title": "Import wallets",
   "menu.daedalus": "Daedalus",
   "menu.daedalus.about": "About Daedalus",
+  "menu.daedalus.redeemItnRewards": "Redeem ITN rewards",
   "menu.daedalus.settings": "Settings",
   "menu.daedalus.walletSettings": "Wallet Settings",
   "menu.daedalus.hideDaedalus": "Hide Daedalus",
