[DDW-500] Update JP translations

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -1149,7 +1149,7 @@
   "wallet.transferFunds.dialog2.total.label": "合計",
   "widgets.assetToken.item.assetName": "アセット名",
   "widgets.assetToken.item.description": "説明",
-  "widgets.assetToken.item.fingerprint": "指紋",
+  "widgets.assetToken.item.fingerprint": "フィンガープリント",
   "widgets.assetToken.item.name": "名称",
   "widgets.assetToken.item.policyId": "ポリシーID",
   "widgets.assetToken.item.ticker": "ティッカー"
