--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -927,8 +927,8 @@
   "wallet.send.form.errors.invalidAmount": "有効な金額を入力してください。",
   "wallet.send.form.errors.invalidTitle": "タイトルを3字以上で入力してください。",
   "wallet.send.form.estimatedFee.label": "推定料金",
-  "wallet.send.form.minAdaRequired": "最低{adaValue}ADAが必要です",
-  "wallet.send.form.minAdaRequiredTooltip": "別のトークンを送金するためには、この受信者に最低{adaValue}ADAを送金する必要があります。",
+  "wallet.send.form.minAdaRequired": "最低{minimumAda}ADAが必要です",
+  "wallet.send.form.minAdaRequiredTooltip": "別のトークンを送金するためには、この受信者に最低{minimumAda}ADAを送金する必要があります。",
   "wallet.send.form.of.label": "/",
   "wallet.send.form.receiver.label": "送金先",
   "wallet.send.form.receiver.placeholder": "アドレスを貼り付け",
