--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -919,7 +919,6 @@
   "wallet.send.form.asset.adaLabel": "Ada",
   "wallet.send.form.asset.label": "Token",
   "wallet.send.form.button.addAssetButtonLabel": "+ Add a token",
-  "wallet.send.form.button.addNewReceiver": "+ Add another receiver",
   "wallet.send.form.button.removeReceiver": "Remove",
   "wallet.send.form.calculatingFeesLabel": "Calculating fees",
   "wallet.send.form.description.hint": "You can type a message here, if you want.",
@@ -1148,6 +1147,7 @@
   "wallet.transferFunds.dialog2.title": "Transfer funds",
   "wallet.transferFunds.dialog2.total.label": "Total",
   "widgets.assetToken.item.assetName": "Asset name",
+  "widgets.assetToken.item.blank": "Blank",
   "widgets.assetToken.item.description": "Description",
   "widgets.assetToken.item.fingerprint": "Fingerprint",
   "widgets.assetToken.item.name": "Name",
