--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -919,7 +919,6 @@
   "wallet.send.form.asset.adaLabel": "ADA",
   "wallet.send.form.asset.label": "トークン",
   "wallet.send.form.button.addAssetButtonLabel": "+ トークンを追加する",
-  "wallet.send.form.button.addNewReceiver": "+ 別のレシーバーを追加する",
   "wallet.send.form.button.removeReceiver": "削除",
   "wallet.send.form.calculatingFeesLabel": "手数料を計算しています",
   "wallet.send.form.description.hint": "任意のメッセージを入力できます",
@@ -1148,6 +1147,7 @@
   "wallet.transferFunds.dialog2.title": "資金を移す",
   "wallet.transferFunds.dialog2.total.label": "合計",
   "widgets.assetToken.item.assetName": "アセット名",
+  "widgets.assetToken.item.blank": "なし",
   "widgets.assetToken.item.description": "説明",
   "widgets.assetToken.item.fingerprint": "フィンガープリント",
   "widgets.assetToken.item.name": "名称",
